# SmartControlCenter

./: .gitignore  README.md  build.gradle  import-summary.txt  settings.gradle
smartControlCenter/: CMakeLists.txt  build.gradle  proguard-rules.pro
smartControlCenter/libs/: core-3.3.0_proguard_base.jar_bak
smartControlCenter/src/main/: AndroidManifest.xml
smartControlCenter/src/main/cpp/: smartHome.txt  testC.cpp
smartControlCenter/src/main/cpp/include/: testC.h
smartControlCenter/src/main/jni/: smartHome.c
smartControlCenter/src/main/res/animator/: fade_in.xml  fade_out.xml
smartControlCenter/src/main/res/drawable/: curtain_close.xml  curtain_open.xml  door_close.xml  door_open.xml  ic_add_circle_black_24dp.xml  ic_arrow_forward_blue_24dp.xml  ic_chevron_right_while_24dp.xml  ic_close_door.xml  ic_close_window.xml  ic_curtain_close.xml  ic_curtain_open.xml  ic_light_off_while.xml  ic_light_on_while.xml  ic_open_door.xml  ic_open_window.xml  ic_power_green.xml  ic_qrcode.xml  ic_switch.xml  status_offline_24dp.xml  status_online_24dp.xml  tab_selector.xml
smartControlCenter/src/main/res/layout/: activity_add_device.xml  activity_air_conditioner_control.xml  activity_curtain_control.xml  activity_device_list.xml  activity_device_panel.xml  activity_door_control.xml  activity_edit_scene.xml  activity_light_control.xml  activity_login.xml  activity_main.xml  activity_qr_code_scan.xml  activity_register.xml  activity_video.xml  activity_window_control.xml  activity_zone_manager.xml  base_toolbar.xml  capture.xml  content_device_list.xml  content_video.xml  device_entity.xml  popup_menu.xml  (+14 more)
smartControlCenter/src/main/res/layout-land/: activity_device_panel.xml
smartControlCenter/src/main/res/layout-large/: activity_device_panel.xml
smartControlCenter/src/main/res/layout-large-land/: activity_device_panel.xml
smartControlCenter/src/main/res/layout-sw600dp/: activity_main.xml
(+152 files in other folders)
